--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -71,8 +71,14 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Products
             </NavLink>
         </li>
-
     </ul>
+    <hr/>
+    <RadzenPanelMenu Style="width:300px">
+       <RadzenPanelMenuItem Text="File Upload" Icon="file_download">
+           <RadzenPanelMenuItem Text="File Upload 1" Path="file-upload-1" Icon="file_download"></RadzenPanelMenuItem>
+           <RadzenPanelMenuItem Text="File Upload 2" Path="file-upload-2" Icon="file_download"></RadzenPanelMenuItem>
+       </RadzenPanelMenuItem>
+    </RadzenPanelMenu>
 </div>
 
 @code {
