--- a/WebOptixSuccess/Components/OrderVendorsComponent.razor
+++ b/WebOptixSuccess/Components/OrderVendorsComponent.razor
@@ -1,75 +1,31 @@
 ﻿@using CoreBusiness
 @using Microsoft.EntityFrameworkCore
+@inject NotificationService NotificationService
 
 @inject Plugins.DataStore.SQL.AppDbContext dbContext
 
-@if (OrderVendors == null)
-{
-    <p><em>Loading...</em></p>
-} else {
-            <RadzenPanel AllowCollapse="true" Style="margin: 10px" >
-                <HeaderTemplate>
-                    <h4 class="m-0 d-flex align-items-center">
-                        <RadzenIcon Icon="account_box" Class="mr-1" /><b>Заказы для поставщиков</b>
-                    </h4>
-                </HeaderTemplate>
-                <ChildContent>
-                    <RadzenDataGrid 
-                        ColumnWidth="200px" AllowFiltering="true" AllowPaging="true" PageSize="5" 
-                        AllowSorting="true" Data="@OrderVendors" TItem="OrderVendor" @bind-Value="@SelectedOrderVendors"
-                        AllowColumnResize="true">
-                        <Columns>
-                            <RadzenDataGridColumn TItem="OrderVendor" Property="OrderVendorId" Title="Id" Width="50px" />
-                            <RadzenDataGridColumn TItem="OrderVendor" Property="Vendor.Company" Title="Компания" Width="150px" />
-                            <RadzenDataGridColumn TItem="OrderVendor" Property="Edited" Title="Дата" Width="120px" />
-                            <RadzenDataGridColumn TItem="OrderVendor" Property="OrderVendorId" Title="Позиций" Width="70px" TextAlign="TextAlign.Center" >
-                                <Template Context="detail">
-                                    @detail.ItemOrders.Count()
-                                </Template>
-                            </RadzenDataGridColumn>
-                            <RadzenDataGridColumn TItem="OrderVendor" Property="OrderVendorId" Title="" TextAlign="TextAlign.Center" Width="100px" Filterable="false" Sortable="false">
-                                <Template Context="detail">
-                                    @*<ButtonEditComponent TypeName="customer" Id="customer.СustomerId.ToString()"></ButtonEditComponent>*@
-                                     <button type="button" @onclick="@(() => DeleteOrderVendor(detail.OrderVendorId))" class="btn btn-link">
-                                        <i class="far fa-trash-alt"></i>
-                                    </button>
-                                </Template>
-                            </RadzenDataGridColumn>
-                        </Columns>
-                    </RadzenDataGrid>
+<div class="row" style="margin:10px;">
+    <div class="col-md-6">
+        Добавить поставщика
+        <RadzenTextBox Placeholder="Введите имя поставщика" Change=@(args => OnChangeAddVendor(args)) Class="w-100" />
+    </div>
+    <div class="col-md-6">
+         Добавить заказ поставщика
+        <RadzenDropDown AllowClear="true" TValue="int" AllowVirtualization="true" Class="w-100" 
+            LoadData=@LoadDataVendors AllowFiltering="true" Count="@countVendors"
+            Data=@vendors TextProperty="Company" ValueProperty="VendorId"
+            Change=@(args => OnChangeAddOrderVendor(args)) Placeholder="Выберите поставщика" />
+    </div>
+</div>
 
-                    <RadzenButton Click=@(args => OnClick("Secondary button")) Text="Добавить поставщика" 
-                        ButtonStyle="ButtonStyle.Light" style="margin:10px;" />
-                    <RadzenButton Click=@(args => OnClick("Secondary button")) Text="Добавить заказ поставщика" 
-                        ButtonStyle="ButtonStyle.Light" style="margin:10px;" />
-                </ChildContent>
-            </RadzenPanel>
-            }
 
 @code {
     IEnumerable<Vendor>? vendors = null;
     int countVendors;
 
     [Parameter]
-    public IQueryable<OrderVendor>? OrderVendors { get; set; }
+    public EventCallback UpdateCallback { get; set; }
 
-    [Parameter]
-    public IList<ItemOrder>? ItemOrderCollection { get; set; }
-    [Parameter]
-    public SelectedOrderModel SelectedOrder { get; set; } = new SelectedOrderModel();
-    [Parameter]
-    public IList<OrderVendor> SelectedOrderVendors {
-        get => selectedOrders;
-        set
-        {
-            selectedOrders = value;
-            ItemOrderCollection = selectedOrders?.FirstOrDefault()?.ItemOrders;
-            SelectedOrder.Company = selectedOrders?.FirstOrDefault()?.Vendor?.Company ?? "";
-            SelectedOrder.SelectedOrderId = selectedOrders?.FirstOrDefault()?.OrderVendorId;
-        }}
-
-
-    IList<OrderVendor> selectedOrders = new List<OrderVendor>();
 
     protected override void OnInitialized()
     {
@@ -77,22 +33,53 @@
         LoadVendors();
     }
 
-    private void LoadVendors()
+    void LoadVendors()
     {
         vendors = dbContext.Vendors.ToList();
     }
 
-    private void OnClick(string text)
+    //EventConsole console;
+
+    void OnChangeAddVendor(string value)
+    {
+        //console.Log($"{name} value changed to {value}");
+        Vendor newVendor = new Vendor(){ Name = value, Company = value };
+        dbContext.Vendors.Add(newVendor);
+        dbContext.SaveChanges();
+        LoadVendors();
+        var message = new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Поставщик успешно добавлен.", Detail = "Поставщик успешно добавлен!", Duration = 4000 };
+        NotificationService.Notify(message);
+    }
+
+    //Выбор поставщика при добавлении заказа
+    void OnChangeAddOrderVendor(object args)
+    {
+        //var str = value;
+
+        //console.Log($"{name} value changed to {str}");
+
+        if ( args != null && (int)args > 0 )
+        {
+            dbContext.OrderVendors.Add(
+                new OrderVendor()
+                    {
+                        VendorId = (int)args,
+                        Edited = DateTime.Now
+                    }
+            );
+            dbContext.SaveChanges();
+            UpdateCallback.InvokeAsync();
+        }
+        var message = new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Заказ успешно добавлен.", Detail = "Заказ успешно добавлен!", Duration = 4000 };
+        NotificationService.Notify(message);
+    }
+
+    public void OnClick(string text)
     {
 
     }
 
-    private void DeleteOrderVendor(int OrderVendorId)
-    {
-
-    }
-
-    private void LoadDataVendors(LoadDataArgs args)
+    void LoadDataVendors(LoadDataArgs args)
     {
         //var query = dbContext.Vendors.AsQueryable();
 
