--- a/WebOptixSuccess/Pages/_Host.cshtml
+++ b/WebOptixSuccess/Pages/_Host.cshtml
@@ -9,6 +9,7 @@
 
 <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
 <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+<script src="~/js/SaveAsFile.js"></script>
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
