--- a/WebOptixSuccess/Shared/NavMenu.razor
+++ b/WebOptixSuccess/Shared/NavMenu.razor
@@ -50,8 +50,15 @@
             </NavLink>
         </li>
     </ul>
-</div>
-    <RadzenPanelMenu Style="width:250px">
+        <RadzenPanelMenu Style="width:250px">
+
+        <RadzenPanelMenuItem Text="File Upload" Icon="file_download">
+           <RadzenPanelMenuItem Text="Upload" Path="upload" Icon="arrow_right_alt"></RadzenPanelMenuItem>
+           <RadzenPanelMenuItem Text="file-upload-1" Path="file-upload-1" Icon="arrow_right_alt"></RadzenPanelMenuItem>
+           <RadzenPanelMenuItem Text="file-upload-2" Path="file-upload-2" Icon="arrow_right_alt"></RadzenPanelMenuItem>
+           <RadzenPanelMenuItem Text="RadzenUpload" Path="RadzenUpload" Icon="arrow_right_alt"></RadzenPanelMenuItem>
+        </RadzenPanelMenuItem>
+
         <RadzenPanelMenuItem Text="Categories & Products" Icon="reorder">
            <RadzenPanelMenuItem Text="Categories" Path="categories" Icon="arrow_right_alt"></RadzenPanelMenuItem>
            <RadzenPanelMenuItem Text="Products" Path="products" Icon="arrow_right_alt"></RadzenPanelMenuItem>
@@ -62,11 +69,10 @@
            <RadzenPanelMenuItem Text="Fetch data" Path="fetchdata" Icon="arrow_right_alt"></RadzenPanelMenuItem>
         </RadzenPanelMenuItem>
 
-        <RadzenPanelMenuItem Text="File Upload" Icon="file_download">
-           <RadzenPanelMenuItem Text="File Upload 1" Path="file-upload-1" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-           <RadzenPanelMenuItem Text="File Upload 2" Path="file-upload-2" Icon="arrow_right_alt"></RadzenPanelMenuItem>
-        </RadzenPanelMenuItem>
+
     </RadzenPanelMenu>
+</div>
+
 
 
 
