--- a/WebOptixSuccess/Pages/FileUpload1.razor
+++ b/WebOptixSuccess/Pages/FileUpload1.razor
@@ -6,26 +6,14 @@
 @inject ILogger<FileUpload1> Logger
 @inject IWebHostEnvironment Environment
 
-<h3>Upload Files</h3>
+<PageTitle>file-upload-1</PageTitle>
 
-<p>
-    <label>
-        Max file size:
-        <input type="number" @bind="maxFileSize" />
-    </label>
-</p>
-
-<p>
-    <label>
-        Max allowed files:
-        <input type="number" @bind="maxAllowedFiles" />
-    </label>
-</p>
+<h3>file-upload-1</h3>
 
 <p>
     <label>
         Upload up to @maxAllowedFiles of up to @maxFileSize bytes:
-        <InputFile OnChange="@LoadFiles" multiple />
+        <InputFile OnChange="@LoadFiles" multiple class="custom-file-input" accept=".xls,.xlsx"/>
     </label>
 </p>
 
@@ -52,7 +40,7 @@ else
 
 @code {
     private List<IBrowserFile> loadedFiles = new();
-    private long maxFileSize = 1024 * 15;
+    private long maxFileSize = 1024 * 100;
     private int maxAllowedFiles = 3;
     private bool isLoading;
 
@@ -67,7 +55,8 @@ else
             {
                 loadedFiles.Add(file);
 
-                var trustedFileNameForFileStorage = Path.GetRandomFileName();
+                var trustedFileNameForFileStorage = $"{DateTime.Now.Date}-{file.Name}";
+                //var trustedFileNameForFileStorage = Path.GetRandomFileName();
                 var path = Path.Combine(Environment.ContentRootPath,
                         Environment.EnvironmentName, "unsafe_uploads",
                         trustedFileNameForFileStorage);
