--- a/WebOptixSuccess/Shared/NavMenu.razor
+++ b/WebOptixSuccess/Shared/NavMenu.razor
@@ -16,6 +16,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="customers">
+                <RadzenIcon Icon="person_pin"  />
                 <span class="oi oi-plus" aria-hidden="true"></span> Клиенты
             </NavLink>
         </li>
@@ -40,13 +41,13 @@
 
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="vendors">
-                <span class="oi oi-plus" aria-hidden="true"></span> Поставщики
+                <RadzenIcon Icon="account_box"  />Поставщики
             </NavLink>
         </li>
         
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="Settings">
-                <span class="oi oi-plus" aria-hidden="true"></span> Обслуживание
+                <span class="oi settings" aria-hidden="true"></span> Обслуживание
             </NavLink>
         </li>
     </ul>
