--- a/WebOptixSuccess/Components/RadzenMasterDetailComponent.razor
+++ b/WebOptixSuccess/Components/RadzenMasterDetailComponent.razor
@@ -13,7 +13,7 @@
         <RadzenPanel AllowCollapse="true" Style="margin: 10px" On>
             <HeaderTemplate>
                 <h4 class="m-0 d-flex align-items-center">
-                    <RadzenIcon Icon="account_box" Class="mr-1" /><b>Заказы от покупателей</b>
+                    <RadzenIcon Icon="person_pin" Class="mr-1" /><b>Заказы от покупателей</b>
                 </h4>
             </HeaderTemplate>
             <ChildContent>
